--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,17 +58,26 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function (e) {
+  
+  function playSound(e) {
     const audio = document.querySelector(`audio[data-key = "${e.keyCode}"]`);
     const key = document.querySelector(`.key[data-key = "${e.keyCode}"]`);
     if(!audio) return; // stop function from running if incorrect key press
     audio.currentTime = 0; // rewinds audio to start so key seems more reactive
     audio.play();
-    key.classList.toggle('playing');
-  });
-
+    key.classList.add('playing');
+  }
+  
+  function removeTransition (e) {
+    if (e.propertyName !== 'transform') return; //skip it if it is not a transform
+    this.classList.remove('playing');
+  };
+  
   const keys = document.querySelectorAll('.key');
-  keys.forEach(key => )
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+  window.addEventListener('keydown', playSound);
+
 </script>
 
 
